/*
 * Copyright (c) 2018 - present.  Boling Consulting Solutions (bcsw.net)
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 */
syntax = "proto3";

option java_multiple_files = true;
option java_package = "net.bcsw.examples.exampleproto";
option java_outer_classname = "ExampleProto";

package example;

// The example service definition.
service Worker {
    // Sends a single request and expect back a single response
    rpc RequestUnaryOperation(ExampleRequest) returns (ExampleResponse) {}
}

// The request message containing the user's name.
message ExampleRequest {
    int64 utc_timestamp = 1;   // UTC seconds since epoch
    uint32 pon_id = 2;
    uint32 onu_id = 3;
    bytes payload = 4;
}

// The response to a request
message ExampleResponse {
    int64 utc_timestamp = 1;   // Copied from Request
    uint32 pon_id = 2;
    uint32 onu_id = 3;
    bytes payload = 4;
}
